--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  table_calendar: ^3.0.3
+  flutter_slidable: 0.6.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  visibility_detector: ^0.2.0
+  firebase_core: "^1.10.2"
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  #assets:
+     #- assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
